# optee_examples

Event/host/: command_handlers.c  command_handlers.h  connection.c  connection.h  enclave_utils.c  networking.c
event_manager/: CMakeLists.txt  Makefile
event_manager/host/: command_handlers.c  command_handlers.h  connection.c  connection.h  defines.h  enclave_utils.c  enclave_utils.h  event_manager.c  event_manager.h  logging.h  main.c  module.h  module_api.c  module_list.c  networking.c  networking.h  tee_client_api_test.c  utils.c  utils.h
